fetch address completed